# chatddx.com

./: flake.nix  package-lock.json  package.json
backend/: .env  pyproject.toml  secret_key
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_openaichat_logit_bias_and_more.py  0003_remove_openaichat_description_openaichat_identifier.py  0004_openaichatcluster.py  0005_openaichat_stream.py
backend/app/: settings.py  urls.py
client/: dev.chatddx.com-key.pem  dev.chatddx.com.pem  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: hooks.server.ts
client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.ts
src/routes/: +page.svelte
web/: package-lock.json  package.json
