[tool.poetry]
name = "chatddx-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Holmbäck <alexander.holmback@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
